[package]
name = "async-graphql-plugin-relay"
description = "Relay support for async-graphql"
version = "0.5.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"


repository = "https://github.com/gibbandit/async-graphql-plugin-relay"
readme = "README.md"

keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = "7"
async-graphql-plugin-relay-derive = { path = "derive", version = "^0.5" }
async-trait = "0.1.68"
base64 = "0.22.0"
#sea-orm = { version = "0.12", optional = true }
serde = { version = "1.0.163", optional = true }

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }

[workspace]
members = ["derive", "example"]
