[package]
name = "async-graphql-plugin-relay-derive"
description = "Derive macros for async-graphql-relay crate. Don't use directly!"
version = "0.5.2"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"

repository = "https://github.com/gibbandit/async-graphql-plugin-relay"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.109"
quote = "1.0.27"
darling = "0.13.4"
